doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.12.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Lehrkraft\Desktop\Projekt_Catering\mssql-jdbc-8.2.2.jre8.jar;C:\Program Files\BlueJ\lib\userlib\mssql-jdbc-10.2.0.jre11.jar;C:\Program Files\BlueJ\lib\userlib\mssql-jdbc-10.2.0.jre17.jar;C:\Program Files\BlueJ\lib\userlib\mssql-jdbc-10.2.0.jre8.jar;F:\Schule\Informatik\Info 11\4_Softwareentwicklung\GUI_Projekte\Grafik_Angabe
-d
F:\Schule\Informatik\Info 11\4_Softwareentwicklung\GUI_Projekte\Grafik_Angabe\doc
-encoding
UTF-8
-charset
UTF-8
F:\Schule\Informatik\Info 11\4_Softwareentwicklung\GUI_Projekte\Grafik_Angabe\STARTFENSTER.java
<---- end of javadoc command ---->
Loading source file F:\Schule\Informatik\Info 11\4_Softwareentwicklung\GUI_Projekte\Grafik_Angabe\STARTFENSTER.java...
Constructing Javadoc information...
F:\Schule\Informatik\Info 11\4_Softwareentwicklung\GUI_Projekte\Grafik_Angabe\STARTFENSTER.java:13: error: cannot find symbol
    private JLabel label;
            ^
  symbol:   class JLabel
  location: class STARTFENSTER
F:\Schule\Informatik\Info 11\4_Softwareentwicklung\GUI_Projekte\Grafik_Angabe\STARTFENSTER.java:14: error: cannot find symbol
    private JButton button;
            ^
  symbol:   class JButton
  location: class STARTFENSTER
2 errors
